dataset1235/2025-2/610742602/users/3642541582/executions/2563853024_1630070338.log
== SUBMISSION (2025-09-02 20:25:04)
-- CODE: 
numero = float(input("digite um numero: ")
quadrado = numero * 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
File "XXXX", line 1
    numero = float(input("digite um numero: ")
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
File "XXXX", line 1
    numero = float(input("digite um numero: ")
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
File "XXXX", line 1
    numero = float(input("digite um numero: ")
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
File "XXXX", line 1
    numero = float(input("digite um numero: ")
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
File "XXXX", line 1
    numero = float(input("digite um numero: ")
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
File "XXXX", line 1
    numero = float(input("digite um numero: ")
                  ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:25:10)
-- CODE: 
numero = float(input("digite um numero: "))
quadrado = numero * 2
print(quadrado)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
---- user output:
digite um numero: 10.0
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
---- user output:
digite um numero: 21.0
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
---- user output:
digite um numero: -200.0
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
---- user output:
digite um numero: 24.2
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
---- user output:
digite um numero: -9.0
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
---- user output:
digite um numero: 4.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:25:39)
-- CODE: 
numero = float(input("digite um numero: "))
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
---- user output:
digite um numero: 25.0
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
---- user output:
digite um numero: 110.25
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
---- user output:
digite um numero: 10000.0
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
---- user output:
digite um numero: 146.41
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
---- user output:
digite um numero: 20.25
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
---- user output:
digite um numero: 4.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:25:38)
-- CODE: 
numero = float(input("digite um numero: "))
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
---- user output:
digite um numero: 25.0
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
---- user output:
digite um numero: 110.25
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
---- user output:
digite um numero: 10000.0
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
---- user output:
digite um numero: 146.41
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
---- user output:
digite um numero: 20.25
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
---- user output:
digite um numero: 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:25:30)
-- CODE: 
numero = float(input("digite um numero: "))
quadrado = numero * 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
---- user output:
digite um numero: 10.0
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
---- user output:
digite um numero: 21.0
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
---- user output:
digite um numero: -200.0
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
---- user output:
digite um numero: 24.2
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
---- user output:
digite um numero: -9.0
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
---- user output:
digite um numero: 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:25:03)
-- CODE: 
numero = float(input("digite um numero: ")
quadrado = numero * 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
-- ERROR:
File "XXXX", line 1
    numero = float(input("digite um numero: ")
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
-- ERROR:
File "XXXX", line 1
    numero = float(input("digite um numero: ")
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
-- ERROR:
File "XXXX", line 1
    numero = float(input("digite um numero: ")
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
-- ERROR:
File "XXXX", line 1
    numero = float(input("digite um numero: ")
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
-- ERROR:
File "XXXX", line 1
    numero = float(input("digite um numero: ")
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
-- ERROR:
File "XXXX", line 1
    numero = float(input("digite um numero: ")
                  ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:25:09)
-- CODE: 
numero = float(input("digite um numero: "))
quadrado = numero * 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.0
---- correct output:
25.0
---- user output:
digite um numero: 10.0
-- TEST CASE 2:
---- input:
10.5
---- correct output:
110.25
---- user output:
digite um numero: 21.0
-- TEST CASE 3:
---- input:
-100.0
---- correct output:
10000.0
---- user output:
digite um numero: -200.0
-- TEST CASE 4:
---- input:
12.1
---- correct output:
146.41
---- user output:
digite um numero: 24.2
-- TEST CASE 5:
---- input:
-4.5
---- correct output:
20.25
---- user output:
digite um numero: -9.0
-- TEST CASE 6:
---- input:
2.0
---- correct output:
4.0
---- user output:
digite um numero: 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
